--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -75,7 +75,7 @@
       display: inline-block;
       vertical-align: top;
       font-size: 21px;
-      width: 190px;
+      width: 200px;
       font-weight: bold;
       margin: 36px 0 0px -11px;
       z-index: 3;
@@ -86,6 +86,7 @@
       vertical-align: top;
 
       .chkBx {
+        position: relative;
         z-index: 3;
         .header-contact-label {
           display: inline-block;
@@ -115,7 +116,7 @@
           background: url(../../src/img/sprite.png);
           background-position: -3px 21px;
           top: 3px;
-          margin-left: 8px;
+          margin-left: 4px;
           margin-right: 5px;
         }
 
@@ -135,7 +136,12 @@
         margin-left: -11px;
         margin-top: -56px;
         opacity: 0;
+        position: absolute;
+        .chkBx-showPhone-text{
+          margin: 0 0 0 1px;
+        }
       }
+
       .show-phone {
         display: block;
         animation-name: show-phone;
