--- a/src/css/_slider.scss
+++ b/src/css/_slider.scss
@@ -11,15 +11,16 @@
 }
 
 .background-dark {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.3);
   width: 100%;
-  height: 599px;
+  height: 547px;
 }
 
 .navbar {
   background-color: rgba(0, 0, 0, 0.1);
   margin-bottom: 0;
   .menu {
+    margin-left: -10px;
     .menu-item {
       display: inline-block;
       margin: 10px 15.5px 0 8.5px;
@@ -27,12 +28,69 @@
         font-family: latoregular, sans-serif;
         text-decoration: none;
         color: white;
-        font-size:  21px;
+        font-size: 21px;
       }
-      a:hover{
+      a:hover {
         color: #00b3ee;
         cursor: url("../img/clicker.png"), auto;
       }
     }
   }
+}
+
+.slider-title {
+  margin: 100px 0 0 -44px;
+  .slider-titleText {
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    letter-spacing: -0.2px;
+  }
+  .slider-title-separator {
+    width: 144px;
+    margin-top: -2px;
+  }
+  .slider-titleName {
+    text-align: center;
+    color: white;
+    font-size: 29px;
+    font-weight: bold;
+    width: 617px;
+    text-transform: uppercase;
+    margin-left: 310px;
+    margin-top: -3px;
+    word-spacing: 4px;
+    line-height: 37px;
+  }
+
+}
+.titleBtnGroup {
+  text-align: center;
+  margin: 48px 0 0 -46px;
+  .btn-custom {
+    width: 293px;
+    height: 57px;
+    font-size: 24.5px;
+    color: white;
+    border: none;
+    text-align: center;
+  }
+  .btn-appointment{
+    background-color: #46b6e3;
+  }
+  .titleBtnGroup-separator{
+    font-size: 24.5px;
+    color: white;
+    border: none;
+    text-align: center;
+    margin: 11px 0 0 6px;
+    vertical-align: sub;
+  }
+  .btn-askDoctor{
+    margin-left: 7px;
+    margin-top: 2px;
+    background: transparent;
+    border: 1px solid white;
+  }
+
 }
