--- a/src/css/_slider.scss
+++ b/src/css/_slider.scss
@@ -2,7 +2,7 @@
 .slider {
   background-image: url(../img/big_004.jpg);
   background-repeat: no-repeat;
-  width: 1399px;
+  width: 100%;
   height: 599px;
   background-position: -23px -65px;
   margin-top: 2px;
@@ -20,7 +20,7 @@
   background-color: rgba(0, 0, 0, 0.1);
   margin-bottom: 0;
   .menu {
-    margin-left: -10px;
+    margin-left: 16px;
     .menu-item {
       display: inline-block;
       margin: 10px 15.5px 0 8.5px;
@@ -39,7 +39,7 @@
 }
 
 .slider-title {
-  margin: 100px 0 0 -44px;
+  margin: 100px 0 0 4px;
   .slider-titleText {
     text-align: center;
     color: white;
@@ -57,16 +57,17 @@
     font-weight: bold;
     width: 617px;
     text-transform: uppercase;
-    margin-left: 310px;
-    margin-top: -3px;
-    word-spacing: 4px;
-    line-height: 37px;
+    margin-left: 291px;
+    margin-top: -1px;
+    line-height: 35px;
+    letter-spacing: 0.3px;
   }
 
 }
+
 .titleBtnGroup {
   text-align: center;
-  margin: 48px 0 0 -46px;
+  margin: 49px 0 0 7px;
   .btn-custom {
     width: 293px;
     height: 57px;
@@ -75,10 +76,10 @@
     border: none;
     text-align: center;
   }
-  .btn-appointment{
+  .btn-appointment {
     background-color: #46b6e3;
   }
-  .titleBtnGroup-separator{
+  .titleBtnGroup-separator {
     font-size: 24.5px;
     color: white;
     border: none;
@@ -86,11 +87,44 @@
     margin: 11px 0 0 6px;
     vertical-align: sub;
   }
-  .btn-askDoctor{
+  .btn-askDoctor {
     margin-left: 7px;
     margin-top: 2px;
     background: transparent;
     border: 1px solid white;
   }
 
+}
+
+.factsAboutCompany {
+  margin: 72px 0 0 188px;
+  .factsAboutCompany-item {
+    display: inline-block;
+    width: 201px;
+    height: 248px;
+    background-color: rgba(70, 182, 227, 0.86);
+    color: white;
+    .factsAboutCompany-number{
+      font-size: 40px;
+      text-align: center;
+      margin: 9px 0 0 4px;
+      letter-spacing: 1px;
+      font-weight: 900;
+      font-family: latobold;
+    }
+    .factsAboutCompany-fact{
+      margin: 99px 0 0 9px;
+      font-size: 17.5px;
+      text-align: center;
+      line-height: 20px;
+    }
+    .factsAboutCompany-separator{
+      width: 45px;
+      margin: 0 0 0 0;
+    }
+  }
+  .lighter {
+    background-color: #70c7ea;
+    background-color: rgba(112, 199, 234, 0.86);
+  }
 }
