--- a/src/css/_consult.scss
+++ b/src/css/_consult.scss
@@ -1,20 +1,54 @@
-.modal-window{
+.modal-window {
   position: fixed;
-  top:0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   transition: 10s;
+  .paragraph {
+    display: block;
+    margin: 100px auto;
+    background-color: rgba(177, 178, 179, 0.5);
+    padding: 20px;
+    font-size: 13px;
+    width: 500px;
+    //height: 200px;
+    line-height: 20px;
+    position: relative;
+    .paragraph-close {
+      position: absolute;
+      font-size: 25px;
+      top: -5px;
+      right: 2px;
+      cursor: pointer;
+      color: white;
+    }
+    .paragraph-title {
+      font-size: 20px;
+      text-align: center;
+      font-family: lato, sans-serif;
+      color: #70c7ea;
+    }
+    .input-modal {
+      width: 80%;
+      margin: 2% 10%;
+      height: 38px;
+      font-size: 23px;
+      padding: 3px 5px;
+      border-radius: 7px;
+      border-color: #70c7ea;
+    }
+    .btn-custom {
+      width: 80%;
+      margin: 5px 10%;
+      background-color: #70c7ea;
+      border-color: #70c7ea;
+      font-size: 20px;
+      padding: 8px;
+      color: white;
+      border-radius: 9px;
+    }
+  }
 }
 
-.paragraph{
-  display: block;
-  margin: 100px auto;
-  background-color: #99CCFF;
-  padding: 20px;
-  font-size: 13px;
-  width: 500px;
-  height:200px;
-  line-height: 20px;
-}
