refactor modal window

--- a/src/css/_consult.scss
+++ b/src/css/_consult.scss
@@ -52,6 +52,14 @@
   }
 }
 
+.hide{
+  display: none;
+}
+
+.show{
+  display: block;
+}
+
 .consult{
   background-color: #ebebeb;
   height: 484px;
